[package]
name = "selene-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "Node",
  "Text",
  "HtmlElement",
  "EventTarget",
  "Event",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
